Fixed issue with margins.
Container component was given a maximum width of 1200px with 20px of padding left/right. This helped contain the website when screen was too wide.

--- a/acorn/src/components/Navbar.css
+++ b/acorn/src/components/Navbar.css
@@ -6,10 +6,6 @@
     padding-bottom: 12px;
     top: 0;
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
     transition: all 300ms ease-in-out;
 }
 
@@ -20,16 +16,17 @@
     transition: all 300ms ease-in-out;
 }
 
+.nav-items {
+    margin: auto;
+    padding: 0 20px;
+    max-width: 1200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .menu-button, .cart-button {
     cursor: pointer;
-}
-
-.menu-button {
-    margin-left: 5vw;
-}
-
-.cart-button {
-    margin-right: 5vw;
 }
 
 .logo {
