--- a/acorn/src/styles/App.css
+++ b/acorn/src/styles/App.css
@@ -1,5 +1,5 @@
 .main-hero {
-    margin: 0 15px;
+    margin: auto;
     padding: 30px;
     padding-bottom: 60px;
     text-align: center;
@@ -11,10 +11,6 @@
 .main-heading {
     font-size: clamp(2rem, 5vw, 3rem);
     font-weight: 500;
-}
-
-@media screen and (min-width: 600px) {
-
 }
 
 .main-description {
@@ -36,15 +32,17 @@
 }
 
 .FadeInOnIntersect {
-    margin: auto;
+    width: 100%;
     opacity: 0;
     filter: blur(5px);
     transform: translateY(10%);
     transition: all 0.6s;
   }
   
-  .FadeInOnIntersect.fade-in {
+.FadeInOnIntersect.fade-in {
+    width: 100%;
     opacity: 1;
     filter: blur(0);
     transform: translateY(0);
-  }
+    transition: all 0.6s;
+}
